--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,3 +31,4 @@ jobs:
         app-name: StarWarsStore
         slot-name: 'Production'
         publish-profile: $${{secrets.AZURE_WEB_APP_PROFILE}}
+        package: publish
