--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./
 
     
     steps:
@@ -31,4 +34,4 @@ jobs:
         app-name: StarWarsStore
         slot-name: 'Production'
         publish-profile: $${{secrets.AZURE_WEB_APP_PROFILE}}
-        package: publish
+        package: ./publish
