--- a/StarWarsApi/Properties/launchSettings.json
+++ b/StarWarsApi/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:27900",
-      "sslPort": 44358
+      "applicationUrl": "http://localhost:41388",
+      "sslPort": 44313
     }
   },
   "profiles": {
-    "StarWarsApi": {
+    "StarWarsStoreApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7135;http://localhost:5026",
+      "applicationUrl": "https://localhost:7199;http://localhost:5262",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
