--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ../
+        working-directory: ./
 
     
     steps:
@@ -34,4 +34,4 @@ jobs:
         app-name: StarWarsStore
         slot-name: 'Production'
         publish-profile: $${{secrets.AZURE_WEB_APP_PROFILE}}
-        package: ../publish
+        package: ./publish
